# basicengine-firmware

./: .clang-format  .gitignore  ChangeLog  Makefile  Makefile.dos  Makefile.h3  Makefile.hosted  Makefile.sdl  README  README.md  ToDo  basic.cpp  common.mk  configur.cpp  configure.sh  control.cpp  extern.cpp  fileio.cpp  math.cpp  module-debug.gdbinit  operand.cpp  property.cpp  rgbyuv.cpp  tidy.sh  tscreen.h  ttbasic.ino  tvutil.cpp  variable.cpp  ztypes.h
arduino_compat/: Esp.h  FS.h  SPI.h  Time.cpp  Time.h  WString.cpp  WString.h  Wire.h  binary.h  border_pal.h  core_esp8266_noniso.cpp  pgmspace.h  stdlib_noniso.h
attic/: README.md
doc/: asciidoctor.css  e.README  manual.adoc
doc/manual/: manual_bindings.tex  manual_dyncall_api.tex
dos/: Arduino.cpp  Arduino.h  TKeyboard.cpp  dosaudio.cpp  dosaudio.h  dosgfx.cpp  dosgfx.h  idle.c  memrchr.c  my_uclock.c  platform_joystick.h  vesa.c  vesa.h
dos/sound.lib/: ac97_def.c  ac97_def.h  au.c  au.h  def.h  dpmi_c.c  emu10k1.h  makegcc  makegcc.bat  makewatc  makewatc.bat  mdma.c  pcibios.c  pcibios.h  readme  sc_cmi.c  sc_e1371.c  sc_ich.c  sc_inthd.c  sc_inthd.h  sc_sbl24.c  sc_sbl24.h  sc_sbliv.c  sc_sbliv.h  sc_sbxfi.c  sc_via82.c  tim.c
dyncall/: dyncall_callvm_arm64.c
fonts/: k8x12.txt  readme_k8x12.txt  readme_misaki.txt
fonts/C64_TrueType_v1.2.1-STYLE/: STYLE.nfo  file_id.diz  license.txt
fonts/IchigoJam-FONT/: license.txt  readme.txt
fonts/oldschool_pc_font_pack_v2.2_FULL/: README.NFO
gfx/: blit.h  drawbg.h  spritecoll.h
h3/: Arduino.cpp  Arduino.h  SdFat.h  TKeyboard.cpp  TKeyboard_sdl_client.cpp  Time.cpp  Time.h  files.cpp  h3_i2s.cpp  h3audio.cpp  h3audio.h  h3gfx.cpp  h3gfx.h  h3joy.cpp  h3joy_sdl_client.cpp  h3mouse.cpp  h3mouse_sdl_client.cpp  net.cpp  net_jh.cpp  net_tftp.cpp  platform_joystick.h  sdl_client.h  sdl_client_internal.h  sdl_client_task.cpp
hosted/: Arduino.cpp  Arduino.h  Esp.h  FS.h  SPI.h  SdFat.h  TKeyboard.cpp  Time.cpp  Time.h  WString.h  c_types.h  files.cpp  hosted_i2s.c  hosted_i2s.cpp  hosted_spi.cpp  hosted_spi.h  noniso.cpp  pgmspace.h  platform_joystick.h  stdlib_noniso.h  ttbasic.cpp
include/: ctype.h  dirent.h  libgen.h  newlib.h  regex.h  stdio.h  string.h
include/fatfs/: ffconf.h
include/machine/: _default_types.h  setjmp.h
include/sys/: _intsup.h  _stdint.h  config.h  param.h  reent.h
libraries/Adafruit_ILI9341_STM_TT/: Adafruit_ILI9341_STM_TT.cpp  Adafruit_ILI9341_STM_TT.h
libraries/Psx/: Psx.cpp  Psx.h  platform_joystick.h
libraries/TFlash/: keywords.txt  library.properties
libraries/TKeyboard/: keywords.txt  library.properties
libraries/TNTSC/: keywords.txt  library.properties
libraries/alpha-lib/: CMakeLists.txt  alpha-lib.dox
libraries/alpha-lib/cmake/: Config.cmake.in
libraries/alpha-lib/include/alpha-lib/: overlay_alpha.h  overlay_alpha.hpp  rescale_type.hpp
libraries/alpha-lib/src/: SIMD.h  overlay_alpha.cpp  rescale.hpp
libraries/alpha-lib/test/: CMakeLists.txt  test-overlay_alpha.cpp
po/: helptext_de.po  helptext_es.po  helptext_fr.po  helptext_ja.po  system_de.po  system_es.po  system_fr.po  system_ja.po
sdl/: Arduino.cpp  Arduino.h  TKeyboard.cpp  Time.cpp  Time.h  platform_joystick.h  scalers.h  scalers_imp.h  sdlaudio.cpp  sdlaudio.h  sdlgfx.cpp  sdlgfx.h  sdljoy.cpp
tests/: runtests.bas
ttbasic/: AudioOutput.cpp  AudioOutput.h  BString.cpp  BString.h  GuillotineBinPack.cpp  GuillotineBinPack.h  Makefile  N-0C-B62-A63-Y33-N10.h  P-EE-A22-B22-Y44-N10.h  Psx.cpp  Psx.h  QList.h  Rect.cpp  Rect.h  SID.cpp  SID.h  SdFormatter.cpp  SimplePALOutput.cpp  SimplePALOutput.h  amstrad_8x8.cpp  amstrad_8x8.h  ati_6x8.cpp  ati_6x8.h  audio.h  autogen.mk  basic.cpp  basic.h  basic_ansi.cpp  basic_bg.cpp  basic_config.cpp  basic_engine_128x64.pcx  basic_engine_128x64_pcx.h  basic_engine_pcx.h  basic_file.cpp  basic_help.cpp  basic_input.cpp  basic_io.cpp  basic_math.cpp  basic_native.cpp  basic_native.h  (+135 more)
(+1617 files in other folders)
